# momentum_task

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_library_tables.py  0002_add_borrow_time_to_books.py  0002_use_library_card_number_as_reader_identifier.py  0003_identifiers_to_string6.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  books.py  health.py  readers.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  base.py  book.py  edition.py  reader.py
app/repositories/: __init__.py
app/schemas/: __init__.py  book.py  reader.py
app/services/: __init__.py  book_service.py  reader_service.py
tests/: test_library_schema.py  test_main.py
